refactor(all): 상수화, 구조 변경 등 전반적인 리팩토링